corrected alignment of upload form in submission form

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -739,9 +739,9 @@ input[type="submit"]:active, input[type="button"]:active, button:active, button[
 .form_aligned_block {
     display: inline-block;
     min-width: 270px;
-    width: 49%;
+    width: 45%;
     vertical-align: top;
-    box-sizing: border-box;
+    box-sizing: content-box;
     height: 250px;
 }
 
